--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "tsc && vite build",
     "dist": "tauri build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:database": "vitest tests/database/"
   },
   "dependencies": {
     "@tauri-apps/api": "^2",
@@ -23,15 +26,19 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.16",
     "@tauri-apps/cli": "^2",
+    "@tauri-apps/plugin-sql": "^2.3.0",
     "@types/react": "^18.3.1",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.1",
     "@types/react-grid-layout": "^1.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.21",
+    "jsdom": "^26.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "typescript": "~5.6.2",
-    "vite": "^6.0.3"
+    "vite": "^6.0.3",
+    "vitest": "^3.2.4"
   }
 }
