--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:database": "vitest tests/database/"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "immer": "^10.1.1",
